frontend/assets/styles/components/_game.scss
.game {
  .game-wrapper {
    padding: 0 $desktopPadding 0 $desktopPadding;
    margin-bottom: $fourSpacing;

    .title {
      display: flex;
      align-items: baseline;

      h1 {
        margin-right: $doubleSpacing;
      }

      .game-triggers {
        button {
          cursor: pointer;
          border: 0;
          background: transparent;
          p {
            font-weight: 500;
            color: $textColor;
            text-decoration: underline;
            margin: 0;
            text-underline-offset: 1.5px;
            opacity: 0.5;

            &.active {
              opacity: 1;
            }
          }

          &:hover {
            p {
              text-decoration: none;
            }
          }
        }
      }
    }

    .gaming-field {
      position: relative;
      width: 100%;
      display: flex;
      flex-direction: row;

      .gamer-wrapper {
        width: 35%;
        height: 100%;

        .gamer {
          padding: 0 $desktopPadding 0 $desktopPadding;

          h3 {
            margin-bottom: $singleSpacing;
          }
          p {
            margin-bottom: 6px;
            font-weight: 500;
          }
        }
      }
      .board-wrapper {
        width: 30%;
        height: 100%;
      }
      .other-players-wrapper {
        width: 35%;
        height: 100%;

        h3 {
          margin-bottom: calc($singleSpacing - 3px);
        }

        .other-players {
          padding: 0 $desktopPadding 0 $desktopPadding;
        }
      }
    }
  }

  .field-info {
    display: flex;
    justify-content: flex-end;
    p {
      display: inline-block;
      background-color: $white;
      padding: 4px 12px 4px 12px;
      font-size: 32px;
      line-height: 42px;
      display: inline-block;
      margin: 0;
    }
  }

  .company-info {
    width: 100%;
    margin-bottom: $fourSpacing;
    padding-bottom: $doubleSpacing;
    background-color: $white;

    .content {
      padding: 0 $desktopPadding 0 $desktopPadding;
      margin-bottom: 20px;
    }

    button {
      font-size: 32px;
      line-height: 32px;
      color: $white;
      background-color: $textColor;
      padding: 6px 20px 12px 20px;
      border: 0;

      cursor: pointer;
      transition: all 0.3s ease-in-out;

      &:hover {
        color: $textColor;
        background-color: $grey;
      }
    }

    .project {
      padding: $doubleSpacing $desktopPadding 0 $desktopPadding;
      margin: 0;
      padding-bottom: 50px;

      h3 {
        font-size: 48px;
        line-height: 62px;
        margin-bottom: 0.4em;
      }

      .ar {
        .qr-code {
          width: 100px;

          img {
            width: 100px;
            height: 100px;
          }

          p {
            text-align: center;
          }
        }
      }
    }
  }
}

